 - [DS-60] netid.toLowerCase() in different classes and methods - ID: 2458187
 - Fix for Jira [DS-98] Key jsp.mydspace.request.export.community not set in Messages.properties
 - [2696133] New export option (migrate) and fix for Jira [DS-59]
 - [DS-113] Export item buttons
 - Fix for Jira [DS-127] Item exporter does not export bitsteam descriptions
 
(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini / Paulo Matos)
 - [DS-16] [2057378] Hierarchical LDAP support

(Paul Needham / Jon Bell / Stuart Lewis)
 - Inclusion of uketd_dc OAI-PMH crosswalk

(Yin Latt)
 - [DS-17] SF bug [1931796] DSpace 1.5 Controlled Vocab (edit-metadata.jsp) not working on first box in twobox
 - [DS-18] SF bug [2137425] DSpace 1.5.1(XMLUI) Wrong dir usage of StatisticsLoader

(Claudia Juergen)
 - [DS-19] [2041754] Feature Request #1896717 Registration notification missing information about instance
 - Fix for SF Bug #1775059 Repeated execution of chooser.jsp exhausts db conn pool
 - [DS-20] Fix for SF Bug #2352146 2 Authentications with LoginPage cause connection exhaust
 - [DS-21] Fixed hardcoded metadata language qualifier in DescribeStep to use default.language configuration parameter
 - [DS-22] Fix for SF Bug #2125833 News stored not language dependend (code change in dspace-api-lang googlecode)
 - [DS-23] Fix for SF Bug #2343849 DSQuery invalid check for empty query string
 - [DS-24] Fix for SF Bug #1725817 Error in authorization to submit when you add collection.
   Avoids that groups can be added to themselves.
 - [DS-25] Fix for SF Bug #1968082 SWORD Service Document fails if Collection is untitled
 - [DS-26] Fix for SF Bug #2493794 Hardcoded Strings in DSQuery
 - [DS-28] Fix for SF Bug #1745573 Itemmap-browse.jsp throws Exception on items without date
 - [DS-27] Fix for SF Bug #1571645 NullPointerException possible in review.jsp
 - [DS-29] Fix for SF Bug #2413800 Improper display of Umlauts / Encoding of messages_de.xml